perfscale_regression_ci/content/allow_default_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-default
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          project: default
  podSelector: {}
  policyTypes:
  - Ingress
